implemented mobile nav

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -33,6 +33,10 @@
   margin: 0;
 }
 
+p {
+  line-height: 1.725em;
+}
+
 p, h1 {
   color: white;
   font-family: Silka-Regular;
@@ -46,6 +50,14 @@ h2 {
   font-family: NPS-Black;
   font-size: 50px;
   color: white;
+  line-height: 1em;
+}
+
+h3 {
+  font-family: NPS-Black;
+  font-size: 35px;
+  color: white;
+  line-height: 1em;
 }
 
 h4 {
@@ -61,50 +73,87 @@ a {
 
 body {
   background-color: #262626;
+  overflow-x: hidden;
 }
 
-header {
-  padding: 20px;
+#logo {
+  font-family: Vanguard;
+  font-size: 41px;
+  margin: 2rem;
+}
+
+.flex {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  width: 80vw;
-  max-width: 1520px;
-  min-width: 800px;
-  margin: auto;
+  gap: var(--gap, 1rem);
 }
 
-header #logo {
-  font-family: Vanguard;
-  font-size: 41px;
-}
-
-header .menu__points {
+.primary-header {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
-  width: 451px;
-  font-size: 18px;
 }
 
-.hero__section {
+.mobile-nav-toggle {
+  display: none;
+}
+
+.primary-navigation {
+  list-style: none;
+  padding: 3rem;
+  margin: 0;
+}
+
+@media (max-width: 799px) {
+  .primary-navigation {
+    gap: var(--gap, 3rem);
+    position: fixed;
+    inset: 0 0 0 0;
+    background: #262626;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    padding: 10rem 2em;
+    z-index: 1;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-transform: translateX(100%);
+            transform: translateX(100%);
+    -webkit-transition: -webkit-transform 350ms ease-out;
+    transition: -webkit-transform 350ms ease-out;
+    transition: transform 350ms ease-out;
+    transition: transform 350ms ease-out, -webkit-transform 350ms ease-out;
+  }
+  .primary-navigation[data-visible="true"] {
+    -webkit-transform: translateX(0%);
+            transform: translateX(0%);
+  }
+  .mobile-nav-toggle {
+    display: block;
+    position: absolute;
+    top: 3rem;
+    right: 2rem;
+    z-index: 10;
+    background-color: transparent;
+    background-image: url("../images/burgermenu.svg");
+    background-size: cover;
+    background-repeat: no-repeat;
+    width: 2rem;
+    border: 0;
+    aspect-ratio: 1;
+  }
+  .mobile-nav-toggle[aria-expanded="true"] {
+    background-image: url("../images/close.svg");
+  }
+}
+
+.hero-section {
   width: 100%;
   background: url("../images/heroPicture.png") no-repeat center/cover;
   height: 83vh;
@@ -113,7 +162,7 @@ header .menu__points {
   display: flex;
 }
 
-.hero__section h1 {
+.hero-section h1 {
   background-color: #262626;
   width: -webkit-fit-content;
   width: -moz-fit-content;
@@ -123,7 +172,7 @@ header .menu__points {
   margin-bottom: -25px;
 }
 
-.hero__section #hero__text {
+.hero-section #hero-text {
   font-family: Silka-Regular;
   color: #FFF1AA;
   background-color: #262626;
@@ -135,7 +184,7 @@ header .menu__points {
   margin-top: 20px;
 }
 
-.hero__section .hero__content {
+.hero-section .hero-content {
   margin-top: auto;
   margin-bottom: auto;
   width: 80vw;
@@ -143,14 +192,14 @@ header .menu__points {
   min-width: 800px;
 }
 
-.page__wrapper {
+.page-wrapper {
   margin: auto;
   width: 80vw;
   max-width: 1520px;
   min-width: 800px;
 }
 
-.socials__section {
+.socials-section {
   padding: 30px;
   width: 450px;
   margin: auto;
@@ -170,7 +219,18 @@ hr {
   margin: auto;
 }
 
-.offer__section {
+.business-section {
+  margin: auto;
+  margin-top: 10em;
+  margin-bottom: 10em;
+  max-width: 90ch;
+}
+
+.business-section p {
+  font-size: 2em;
+}
+
+.offer-section {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -180,7 +240,7 @@ hr {
           flex-direction: row;
 }
 
-.offer__section .left__side {
+.offer-section .left-side {
   width: 100%;
   height: -webkit-fit-content;
   height: -moz-fit-content;
@@ -192,7 +252,7 @@ hr {
   /* Safari */
 }
 
-.offer__section .right__side .content__area {
+.offer-section .right-side .content-area {
   border: 1px solid white;
   border-right: 0px;
   display: -webkit-box;
@@ -211,28 +271,32 @@ hr {
   height: 460px;
 }
 
-.offer__section .right__side .content__area img {
+.offer-section .right-side .content-area img {
   width: 120px;
 }
 
-.offer__section .right__side .content__area .content__text {
+.offer-section .right-side .content-area .content-text {
   padding-left: 50px;
   width: 45%;
 }
 
-.offer__section .right__side .content__area:last-child {
+.offer-section .right-side .content-area:first-child {
+  border-top: 0px;
+}
+
+.offer-section .right-side .content-area:last-child {
   border-bottom: 0px;
 }
 
-.founder__section {
+.founder-section {
   background-color: white !important;
 }
 
-.founder__section h2, .founder__section p {
+.founder-section h2, .founder-section p {
   color: #262626;
 }
 
-.founder__section .founder__text {
+.founder-section .founder-text {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -240,14 +304,16 @@ hr {
       -ms-flex-pack: justify;
           justify-content: space-between;
   padding-top: 10.5rem;
-  padding-bottom: 7rem;
+  padding-bottom: 2rem;
 }
 
-.founder__section .founder__text p {
+.founder-section .founder-text p {
   width: 70ch;
 }
 
-.founder__section .founder__portrait {
+.founder-section .founder-portrait {
+  margin-top: 6em;
+  gap: 1.75em;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -258,17 +324,20 @@ hr {
   min-width: 360px;
 }
 
-.founder__section .founder__portrait .portrait__name {
+.founder-section .founder-portrait .portrait-name {
+  max-width: -webkit-fit-content;
+  max-width: -moz-fit-content;
+  max-width: fit-content;
   font-family: NPS-Medium;
   font-size: 1.25rem;
   padding: 0.75em 0em;
 }
 
-.founder__section .founder__portrait p {
+.founder-section .founder-portrait p {
   width: 37ch;
 }
 
-.cooperation__section {
+.cooperation-section {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -279,11 +348,11 @@ hr {
   padding-bottom: 7rem;
 }
 
-.cooperation__section p {
+.cooperation-section p {
   width: 50ch;
 }
 
-.logo__section {
+.logo-section {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -295,7 +364,7 @@ hr {
   padding-bottom: 7rem;
 }
 
-.logo__section img {
+.logo-section img {
   width: 117px;
   -webkit-box-flex: 0;
       -ms-flex: 0 1 17%;
@@ -303,7 +372,7 @@ hr {
   padding: 1em;
 }
 
-.pricing__section .pricing__text {
+.pricing-section .pricing-text {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -314,11 +383,11 @@ hr {
   padding-bottom: 7rem;
 }
 
-.pricing__section .pricing__text p {
+.pricing-section .pricing-text p {
   width: 50ch;
 }
 
-.pricing__section table {
+.pricing-section table {
   margin-left: auto;
   margin-right: auto;
   color: white;
@@ -326,45 +395,42 @@ hr {
   padding: 0.75rem;
 }
 
-.pricing__section table th {
+.pricing-section table th {
   padding: 1rem 4rem;
   font-family: NPS-Medium;
 }
 
-.pricing__section table td {
+.pricing-section table td {
   padding: 1rem 4rem;
   font-family: Silka-Regular;
 }
 
-.pricing__section table .highlighted {
+.pricing-section table .highlighted {
   font-family: NPS-Bold;
 }
 
-.pricing__section .pricing__includes {
+.pricing-section .pricing-includes {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  gap: 5.2em;
   padding-top: 10.5rem;
   padding-bottom: 7rem;
 }
 
-.pricing__section ul {
+.pricing-section ul {
   color: white;
 }
 
-.pricing__section ul li {
+.pricing-section ul li {
   font-family: Silka-Regular;
-  font-size: 20px;
+  font-size: 14.5px;
   padding-bottom: 2rem;
 }
 
-.last__section {
+.last-section {
   background-color: white;
   text-align: center;
   -webkit-box-align: center;
@@ -372,25 +438,25 @@ hr {
           align-items: center;
 }
 
-.last__section .cta__section {
+.last-section .cta-section {
   padding-top: 10.5rem;
   padding-bottom: 7rem;
 }
 
-.last__section #cta__text {
+.last-section #cta-text {
   font-family: NPS-Bold;
   font-size: 110px;
   color: #151515;
 }
 
-.last__section #cta__mail {
+.last-section #cta-mail {
   -webkit-text-stroke: #262626 0.5px;
   font-family: NPS-Regular;
   font-size: 90px;
   padding: 5rem;
 }
 
-.last__section .footer__section {
+.last-section .footer-section {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -402,7 +468,7 @@ hr {
           justify-content: center;
 }
 
-.last__section .footer__font {
+.last-section .footer-font {
   color: #262626;
   font-family: NPS-Regular;
   font-size: 18px;
