--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -39,12 +39,13 @@ p{
     line-height: 1.725em;
 }
 
-p, h1 {
+p {
     color: white;
     font-family: Silka-Regular;
 }
 
 h1 {
+    color: white;
     font-family: Vanguard;
 }
 
@@ -75,12 +76,12 @@ a {
 
 body {
     background-color: #262626;
-    overflow-x: hidden;
+    // overflow-x: hidden;
 }
 
 #logo {
     font-family: Vanguard;
-    font-size: 41px;
+    font-size: 3em;
     margin: 2rem;
 }
 
@@ -104,7 +105,7 @@ body {
     margin: 0;
 }
 
-@media (max-width: 799px) {
+@media (max-width: 50rem) {
     .primary-navigation{
         gap: var(--gap, 3rem);
         position: fixed;
@@ -125,7 +126,7 @@ body {
     .mobile-nav-toggle {
         display: block;
         position: absolute;
-        top: 3rem;
+        top: 3.25rem;
         right: 2rem;
         z-index: 10;
         background-color: transparent;
@@ -140,6 +141,24 @@ body {
     .mobile-nav-toggle[aria-expanded="true"] {
         background-image: url("../images/close.svg");
     }
+}
+
+@media (max-width: 30rem) {
+    #logo {
+        font-size: 2em;
+        color: red;
+    }
+    .mobile-nav-toggle {
+        width: 1.5rem;
+        top: 2.75rem;
+    }
+
+}
+
+.page-wrapper {
+    margin: auto;
+    width: 80vw;
+    min-width: 800px;
 }
 
 .hero-section {
@@ -171,19 +190,37 @@ body {
     }
 }
 
-.page-wrapper {
-    margin: auto;
-    width: 80vw;
-    min-width: 800px;
+@media (max-width: 30rem) {
+    .hero-section {
+        height: 65vh;
+        h1 {
+            font-size: 15vw;
+            margin-bottom: -3vw;
+        }
+        #hero-text {
+            font-size: 6vw;
+            margin-top: 0;
+            padding-bottom: 0;
+        }
+    }
 }
 
 .socials-section {
     padding:30px;
-    width:450px;
+    max-width:450px;
     margin:auto;
     display:flex;
     flex-direction: row;
     justify-content: space-between;
+}
+
+@media (max-width: 30rem) {
+    .page-wrapper {
+        min-width: 0;
+    }
+    .socials-section{
+        font-size: clamp(12px, 3.5vw, 20px);
+    }
 }
 
 hr {
@@ -197,6 +234,18 @@ hr {
     max-width: 90ch;
     p{
         font-size: 2em;
+    }
+}
+
+@media (max-width: 30rem) {
+    .business-section {
+        margin-top: 2.5rem;
+        margin-bottom: 2.5rem;
+        text-align: center;
+        p {
+            line-height: 1.5em;
+            font-size: clamp(12px, 4.75vw, 30px);
+        }
     }
 }
 
@@ -235,6 +284,23 @@ hr {
         }
         .content-area:last-child{
             border-bottom: 0px;
+        }
+    }
+}
+
+@media (max-width: 30rem) {
+    .offer-section {
+        display: block;
+        .left-side {
+            position: relative;
+            top: 0;
+            margin-top: 2.5rem;
+        }
+        .right-side {
+            .content-area {
+                border: 0;
+                
+            }
         }
     }
 }
