--- a/styles/styles.css
+++ b/styles/styles.css
@@ -74,6 +74,7 @@ a {
 
 body {
   background-color: #262626;
+  overflow-x: hidden;
 }
 
 #logo {
@@ -87,6 +88,14 @@ body {
   display: -ms-flexbox;
   display: flex;
   gap: var(--gap, 1rem);
+}
+
+.unselectable {
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
 }
 
 .primary-header {
@@ -213,11 +222,11 @@ body {
     height: 65vh;
   }
   .hero-section h1 {
-    font-size: 15vw;
+    font-size: clamp(50px, 15vw, 80px);
     margin-bottom: -3vw;
   }
   .hero-section #hero-text {
-    font-size: 6vw;
+    font-size: clamp(20px, 6vw, 40px);
     margin-top: 0;
     padding-bottom: 0;
   }
@@ -347,6 +356,87 @@ hr {
   }
 }
 
+.casestudy-section {
+  margin-top: 5rem;
+}
+
+.casestudy-section h2 {
+  width: 15ch;
+  margin-bottom: 5rem;
+}
+
+.swiper {
+  width: 100%;
+  height: 60vh;
+}
+
+.swiper-slide {
+  text-align: center;
+  font-size: 18px;
+  background: #fff;
+  border: 1px white solid;
+  /* Center slide text vertically */
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+}
+
+.swiper-slide {
+  height: 150vh;
+  opacity: 0.7;
+}
+
+.swiper-slide:first-child {
+  background: url("../images/casestudy1.png") no-repeat center/cover;
+}
+
+.swiper-slide:nth-child(2n) {
+  background: url("../images/casestudy2.png") no-repeat center/cover;
+}
+
+.swiper-slide:nth-child(3n) {
+  background: url("../images/casestudy3.png") no-repeat center/cover;
+}
+
+.swiper-slide:hover {
+  opacity: 1;
+  -webkit-transition: opacity 1s ease;
+  transition: opacity 1s ease;
+}
+
+.slider-card .casestudy-name {
+  font-family: Silka-Regular !important;
+  font-size: 1.725rem;
+  margin-bottom: 5rem;
+}
+
+.slider-card .casestudy-slogan {
+  font-family: Silka-Regular !important;
+  font-size: 1.5rem;
+  margin-bottom: 2rem;
+}
+
+.slider-card .casestudy-action {
+  font-family: Silka-Regular !important;
+  font-size: 1rem;
+  margin-bottom: 6rem;
+}
+
+.slider-card .casestudy-bttn {
+  width: 10rem;
+  height: 2.5rem;
+  font-family: Silka-Regular !important;
+  font-size: 0.75rem;
+  border-radius: 1.5rem;
+  border: 0px;
+}
+
 .founder-section {
   background-color: white !important;
 }
@@ -396,6 +486,25 @@ hr {
   width: 37ch;
 }
 
+@media (max-width: 30rem) {
+  .founder-section .founder-text {
+    display: block;
+    padding-top: 3.5rem;
+  }
+  .founder-section .founder-text p {
+    margin-top: 2rem;
+    width: -webkit-fit-content;
+    width: -moz-fit-content;
+    width: fit-content;
+  }
+  .founder-section .founder-portrait {
+    display: block;
+  }
+  .founder-section .portrait-card:nth-child(2n) {
+    margin-top: 5.5rem;
+  }
+}
+
 .cooperation-section {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -415,9 +524,8 @@ hr {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
   padding-bottom: 7rem;
@@ -429,6 +537,25 @@ hr {
       -ms-flex: 0 1 17%;
           flex: 0 1 17%;
   padding: 1em;
+}
+
+@media (max-width: 30rem) {
+  .cooperation-section {
+    display: block;
+  }
+  .cooperation-section p {
+    margin-top: 2.5rem;
+    width: -webkit-fit-content;
+    width: -moz-fit-content;
+    width: fit-content;
+  }
+  .logo-section img {
+    gap: 0rem;
+    padding: 0.5rem;
+    -webkit-box-flex: 0;
+        -ms-flex: 0 1 5%;
+            flex: 0 1 5%;
+  }
 }
 
 .pricing-section .pricing-text {
@@ -489,6 +616,30 @@ hr {
   padding-bottom: 2rem;
 }
 
+@media (max-width: 50rem) {
+  .pricing-section table {
+    display: none;
+  }
+}
+
+@media (max-width: 30rem) {
+  .pricing-section .pricing-text {
+    display: block;
+  }
+  .pricing-section .pricing-text p {
+    margin-top: 2.5rem;
+    width: -webkit-fit-content;
+    width: -moz-fit-content;
+    width: fit-content;
+  }
+  .pricing-section .pricing-includes {
+    display: block !important;
+  }
+  .pricing-section .pricing-includes h3 {
+    margin-bottom: 2.5rem;
+  }
+}
+
 .last-section {
   background-color: white;
   text-align: center;
@@ -532,5 +683,26 @@ hr {
   font-family: NPS-Regular;
   font-size: 18px;
   padding: 2rem;
+}
+
+@media (max-width: 30rem) {
+  .last-section #cta-text {
+    font-size: 4rem;
+  }
+  .last-section #cta-mail {
+    margin-top: 2.5rem;
+    width: -webkit-fit-content;
+    width: -moz-fit-content;
+    width: fit-content;
+    font-size: 2.5rem;
+    padding: 0;
+  }
+  .last-section img {
+    margin-top: 2.5rem;
+  }
+  .last-section .footer-font {
+    font-size: 1rem;
+    padding: 1rem;
+  }
 }
 /*# sourceMappingURL=styles.css.map */
