--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -76,7 +76,7 @@ a {
 
 body {
     background-color: #262626;
-    // overflow-x: hidden;
+    overflow-x: hidden;
 }
 
 #logo {
@@ -88,6 +88,15 @@ body {
 .flex {
     display: flex;
     gap: var(--gap, 1rem);
+}
+
+.unselectable {
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
 }
 
 .primary-header {
@@ -194,11 +203,11 @@ body {
     .hero-section {
         height: 65vh;
         h1 {
-            font-size: 15vw;
+            font-size: clamp(50px, 15vw, 80px);
             margin-bottom: -3vw;
         }
         #hero-text {
-            font-size: 6vw;
+            font-size: clamp(20px, 6vw, 40px);
             margin-top: 0;
             padding-bottom: 0;
         }
@@ -305,6 +314,89 @@ hr {
     }
 }
 
+.casestudy-section {
+    margin-top: 5rem;
+    h2 {
+        width: 15ch;
+        margin-bottom: 5rem;
+    }
+}
+
+.swiper {
+    width: 100%;
+    height: 60vh;
+}
+
+.swiper-slide {
+    text-align: center;
+    font-size: 18px;
+    background: #fff;
+    border: 1px white solid;
+    /* Center slide text vertically */
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: -webkit-flex;
+    display: flex;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
+    -webkit-justify-content: center;
+    justify-content: center;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    -webkit-align-items: center;
+    align-items: center;
+}
+
+.swiper-slide {
+    height:150vh;
+    opacity: 0.7;
+}
+
+.swiper-slide:first-child {
+    background: url('../images/casestudy1.png') no-repeat center / cover;
+}
+
+.swiper-slide:nth-child(2n) {
+    background: url('../images/casestudy2.png') no-repeat center / cover;
+}
+
+.swiper-slide:nth-child(3n) {
+    background: url('../images/casestudy3.png') no-repeat center / cover;
+}
+
+
+.swiper-slide:hover {
+    opacity: 1;
+    transition: opacity 1s ease;
+}
+
+.slider-card {
+    // text-align: left;
+    .casestudy-name {
+        font-family: Silka-Regular!important;
+        font-size: 1.725rem;
+        margin-bottom: 5rem;
+    }
+    .casestudy-slogan {
+        font-family: Silka-Regular!important;
+        font-size: 1.5rem;
+        margin-bottom: 2rem;
+    }
+    .casestudy-action {
+        font-family: Silka-Regular!important;
+        font-size: 1rem;
+        margin-bottom: 6rem;
+    }
+    .casestudy-bttn {
+        width: 10rem;
+        height: 2.5rem;
+        font-family: Silka-Regular!important;
+        font-size: 0.75rem;
+        border-radius: 1.5rem;
+        border: 0px;
+    }
+}
+
 .founder-section {
     background-color: white!important;
     h2,p {
@@ -340,6 +432,25 @@ hr {
 
 }
 
+@media (max-width: 30rem) {
+    .founder-section {
+        .founder-text{
+            display:block;
+            padding-top: 3.5rem;
+            p{
+                margin-top: 2rem;
+                width: fit-content;
+            }
+        }
+        .founder-portrait {
+            display: block;
+        }
+        .portrait-card:nth-child(2n) {
+            margin-top: 5.5rem;
+        }
+    }
+}
+
 .cooperation-section {
     display: flex;
     justify-content: space-between;
@@ -352,13 +463,30 @@ hr {
 
 .logo-section {
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
     flex-wrap: wrap;
     padding-bottom: 7rem;
     img {
         width: 117px;
         flex: 0 1 17%;
         padding: 1em;
+    }
+}
+
+@media (max-width: 30rem) {
+    .cooperation-section {
+        display: block;
+        p {
+            margin-top: 2.5rem;
+            width: fit-content;
+        }
+    }
+    .logo-section {
+        img{
+            gap: 0rem;
+            padding: 0.5rem;
+            flex: 0 1 5%;
+        }
     }
 }
 
@@ -409,6 +537,32 @@ hr {
     }
 }
 
+@media (max-width: 50rem) {
+    .pricing-section {
+        table {
+            display: none;
+        }
+    }
+}
+
+@media (max-width: 30rem) {
+    .pricing-section {
+        .pricing-text {
+            p{
+                margin-top: 2.5rem;
+                width: fit-content;
+            }
+            display: block;
+        }
+        .pricing-includes {
+            h3{
+                margin-bottom: 2.5rem;
+            }
+            display: block!important;
+        }
+    }
+}
+
 .last-section {
     .cta-section {
         padding-top: 10.5rem;
@@ -439,5 +593,26 @@ hr {
         font-family: NPS-Regular;
         font-size: 18px;
         padding: 2rem;
+    }
+}
+
+@media (max-width: 30rem) {
+    .last-section{
+        #cta-text {
+            font-size: 4rem;
+        }
+        #cta-mail {
+            margin-top: 2.5rem;
+            width:fit-content;
+            font-size: 2.5rem;
+            padding: 0;
+        }
+        img{
+            margin-top: 2.5rem;
+        }
+        .footer-font {
+            font-size: 1rem;
+            padding: 1rem;
+        }
     }
 }
