implemented swiper for pricing section

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -29,6 +29,10 @@
   src: url("../font/Silka-Regular.otf") format("opentype");
 }
 
+html {
+  scroll-behavior: smooth;
+}
+
 * {
   margin: 0;
 }
@@ -616,9 +620,18 @@ hr {
   padding-bottom: 2rem;
 }
 
+@media (min-width: 50rem) {
+  .pricingSwiper {
+    display: none;
+  }
+}
+
 @media (max-width: 50rem) {
   .pricing-section table {
     display: none;
+  }
+  .pricingSwiper .swiper-slide {
+    background: #404040;
   }
 }
 
