--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -84,7 +84,7 @@ body {
 
 #logo {
     font-family: Vanguard;
-    font-size: 3em;
+    font-size: clamp(2.25em, 4vw, 4em);
     margin: 2rem;
 }
 
@@ -117,7 +117,7 @@ body {
     margin: 0;
 }
 
-@media (max-width: 50rem) {
+@media (max-width: 48rem) {
     .primary-navigation{
         gap: var(--gap, 3rem);
         position: fixed;
@@ -155,6 +155,13 @@ body {
     }
 }
 
+@media (min-width: 30rem) and (max-width: 48rem)  {
+    #logo {
+        font-size: 2.25em;
+        color: blue;
+    }
+}
+
 @media (max-width: 30rem) {
     #logo {
         font-size: 2em;
@@ -170,7 +177,7 @@ body {
 .page-wrapper {
     margin: auto;
     width: 80vw;
-    min-width: 800px;
+    // min-width: 800px;
 }
 
 .hero-section {
@@ -199,6 +206,22 @@ body {
         margin-bottom: auto;
         width: 80vw;
         min-width: 800px;
+    }
+}
+
+@media (min-width: 30rem) and (max-width: 48rem)  {
+    .page-wrapper {
+        min-width: 0;
+    }
+    .hero-section {
+        h1 {
+            font-size: clamp(50px, 15vw, 90px);
+        }
+        #hero-text {
+            font-size: clamp(20px, 7vw, 40px);
+            margin-top: 0;
+            padding-bottom: 0;
+        }
     }
 }
 
@@ -246,6 +269,18 @@ hr {
     max-width: 90ch;
     p{
         font-size: 2em;
+    }
+}
+
+@media (min-width: 30rem) and (max-width: 48rem)  {
+    .business-section {
+        margin-top: 2.5rem;
+        margin-bottom: 2.5rem;
+        text-align: center;
+        p {
+            line-height: 1.5em;
+            font-size: clamp(12px, 4.75vw, 30px);
+        }
     }
 }
 
@@ -300,6 +335,25 @@ hr {
     }
 }
 
+@media (min-width: 30rem) and (max-width: 48rem)  {
+    .offer-section {
+        display: block;
+        .left-side {
+            position: relative;
+            top: 0;
+            margin-top: 2.5rem;
+        }
+        .right-side {
+            .content-area {
+                height: 20rem;
+                padding-bottom: 2rem;
+                border: 0;
+                
+            }
+        }
+    }
+}
+
 @media (max-width: 30rem) {
     .offer-section {
         display: block;
@@ -328,6 +382,9 @@ hr {
 .swiper {
     width: 100%;
     height: 60vh;
+    .swiper-pagination-bullet-active {
+        background-color: white;
+    }
 }
 
 .swiper-slide {
@@ -400,6 +457,8 @@ hr {
     }
 }
 
+
+
 .founder-section {
     background-color: white!important;
     h2,p {
@@ -433,6 +492,25 @@ hr {
         }
     }
 
+}
+
+@media (min-width: 30rem) and (max-width: 48rem)  { 
+    .founder-section {
+        .founder-text{
+            display:block;
+            padding-top: 3.5rem;
+            p{
+                margin-top: 2rem;
+                width: fit-content;
+            }
+        }
+        .founder-portrait {
+            display: block;
+        }
+        .portrait-card:nth-child(2n) {
+            margin-top: 5.5rem;
+        }
+    }
 }
 
 @media (max-width: 30rem) {
@@ -473,6 +551,23 @@ hr {
         width: 117px;
         flex: 0 1 17%;
         padding: 1em;
+    }
+}
+
+@media (min-width: 30rem) and (max-width: 48rem)  { 
+    .cooperation-section {
+        display: block;
+        p {
+            margin-top: 2.5rem;
+            width: fit-content;
+        }
+    }
+    .logo-section {
+        img{
+            gap: 0rem;
+            padding: 0.5rem;
+            flex: 0 1 5%;
+        }
     }
 }
 
@@ -540,21 +635,58 @@ hr {
     }
 }
 
-@media (min-width: 50rem) {
+@media (min-width: 48rem) {
     .pricingSwiper {
         display: none;
     }
 }
 
-@media (max-width: 50rem) {
+@media (max-width: 48rem) {
     .pricing-section {
         table {
             display: none;
         }
     }
     .pricingSwiper {
+        height: 50vh;
         .swiper-slide {
+            border: 0;
             background: #404040;
+            justify-content: left;
+            .slider-card {
+                // align-items: flex-start;
+                text-align: left;
+                width:100%;
+                .pricing-category {
+                    font-family: NPS-Medium;
+                    font-size: 0.9em;
+                }
+                p {
+                    padding: 1rem 1.75rem;
+                }
+                hr {
+                    margin: auto;
+                    width: 85%;
+                }
+            }
+        }
+    }
+}
+
+@media (min-width: 30rem) and (max-width: 48rem)  { 
+    .pricing-section {
+        .pricing-text {
+            p{
+                margin-top: 2.5rem;
+                width: fit-content;
+            }
+            display: block;
+        }
+        .pricing-includes {
+            h3{
+                margin-bottom: 2.5rem;
+            }
+            display: block!important;
         }
     }
 }
@@ -607,6 +739,27 @@ hr {
         font-family: NPS-Regular;
         font-size: 18px;
         padding: 2rem;
+    }
+}
+
+@media (min-width: 30rem) and (max-width: 48rem)  {  
+    .last-section{
+        #cta-text {
+            font-size: 4rem;
+        }
+        #cta-mail {
+            margin: auto;
+            width:fit-content;
+            font-size: 2.5rem;
+            padding: 0;
+        }
+        img{
+            margin-top: 2.5rem;
+        }
+        .footer-font {
+            font-size: 1rem;
+            padding: 1rem;
+        }
     }
 }
 
