--- a/styles/casestudy_styles.scss
+++ b/styles/casestudy_styles.scss
@@ -109,6 +109,7 @@ body {
 .page-wrapper {
     margin: auto;
     width: 80vw;
+    max-width: 100rem;
 }
 
 /* end basic classes */
@@ -252,6 +253,7 @@ body {
 }
 
 .swiper-slide {
+    width: fit-content;
     text-align: center;
     font-size: 18px;
     /* Center slide text vertically */
